all task completed

--- a/Session-04&05/agentic-notebooks/1_foundations/1_lab1.ipynb
+++ b/Session-04&05/agentic-notebooks/1_foundations/1_lab1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Next it's time to load the API keys into environment variables\n",
     "# If this returns false, make sure env variable is set properly in .env\n",
@@ -32,9 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the key - if you're not using OpenAI, check whichever key you're using! Ollama doesn't need a key.\n",
     "\n",
@@ -50,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,9 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 2 equals 4.\n"
+     ]
+    }
+   ],
    "source": [
     "# And now call it! Any problems, head to the troubleshooting guide\n",
     "# This uses GPT 4.1 nano, the incredibly cheap model\n",
@@ -107,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,9 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If two trains start from the same point and travel in opposite directions, one at 60 miles per hour and the other at 40 miles per hour, and after how many hours will the sum of the distances they have traveled equal the distance a third train would cover traveling at 100 miles per hour in the same time?\n"
+     ]
+    }
+   ],
    "source": [
     "# ask it - this uses GPT 4.1 mini, still cheap but more powerful than nano\n",
     "\n",
@@ -137,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,9 +182,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's analyze the problem step-by-step.\n",
+      "\n",
+      "**Given:**\n",
+      "- Two trains start from the same point and travel in opposite directions.\n",
+      "- Speed of first train = 60 miles/hour\n",
+      "- Speed of second train = 40 miles/hour\n",
+      "- A third train travels at 100 miles/hour.\n",
+      "- We want to find the time \\( t \\) (in hours) when the sum of the distances traveled by the first two trains equals the distance traveled by the third train in the same time \\( t \\).\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Step 1: Express distances traveled by each train\n",
+      "\n",
+      "- Distance traveled by first train after time \\( t \\) hours:\n",
+      "  \\[\n",
+      "  d_1 = 60 \\times t\n",
+      "  \\]\n",
+      "\n",
+      "- Distance traveled by second train after time \\( t \\) hours:\n",
+      "  \\[\n",
+      "  d_2 = 40 \\times t\n",
+      "  \\]\n",
+      "\n",
+      "- Distance traveled by third train after time \\( t \\) hours:\n",
+      "  \\[\n",
+      "  d_3 = 100 \\times t\n",
+      "  \\]\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Step 2: Set up the equation for the sum of distances\n",
+      "\n",
+      "We need:\n",
+      "\\[\n",
+      "d_1 + d_2 = d_3\n",
+      "\\]\n",
+      "\n",
+      "Substitute the expressions:\n",
+      "\\[\n",
+      "60t + 40t = 100t\n",
+      "\\]\n",
+      "\n",
+      "Simplify:\n",
+      "\\[\n",
+      "100t = 100t\n",
+      "\\]\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Step 3: Analyze the equation\n",
+      "\n",
+      "The equation is true for **all** values of \\( t \\). This means:\n",
+      "\n",
+      "- **At any time \\( t \\), the sum of the distances traveled by the first two trains equals the distance traveled by the third train.**\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### **Answer:**\n",
+      "\n",
+      "- The sum of the distances traveled by the first two trains **always equals** the distance traveled by the third train in the same time.\n",
+      "- Therefore, the time \\( t \\) can be **any positive number**.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### **Summary:**\n",
+      "\n",
+      "\\[\n",
+      "\\boxed{\n",
+      "\\text{For all } t \\geq 0, \\quad (60t + 40t) = 100t\n",
+      "}\n",
+      "\\]\n",
+      "\n",
+      "There is no specific time to wait; the relation holds at all times.\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask it again\n",
     "\n",
@@ -164,9 +279,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Let's analyze the problem step-by-step.\n",
+       "\n",
+       "**Given:**\n",
+       "- Two trains start from the same point and travel in opposite directions.\n",
+       "- Speed of first train = 60 miles/hour\n",
+       "- Speed of second train = 40 miles/hour\n",
+       "- A third train travels at 100 miles/hour.\n",
+       "- We want to find the time \\( t \\) (in hours) when the sum of the distances traveled by the first two trains equals the distance traveled by the third train in the same time \\( t \\).\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Step 1: Express distances traveled by each train\n",
+       "\n",
+       "- Distance traveled by first train after time \\( t \\) hours:\n",
+       "  \\[\n",
+       "  d_1 = 60 \\times t\n",
+       "  \\]\n",
+       "\n",
+       "- Distance traveled by second train after time \\( t \\) hours:\n",
+       "  \\[\n",
+       "  d_2 = 40 \\times t\n",
+       "  \\]\n",
+       "\n",
+       "- Distance traveled by third train after time \\( t \\) hours:\n",
+       "  \\[\n",
+       "  d_3 = 100 \\times t\n",
+       "  \\]\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Step 2: Set up the equation for the sum of distances\n",
+       "\n",
+       "We need:\n",
+       "\\[\n",
+       "d_1 + d_2 = d_3\n",
+       "\\]\n",
+       "\n",
+       "Substitute the expressions:\n",
+       "\\[\n",
+       "60t + 40t = 100t\n",
+       "\\]\n",
+       "\n",
+       "Simplify:\n",
+       "\\[\n",
+       "100t = 100t\n",
+       "\\]\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Step 3: Analyze the equation\n",
+       "\n",
+       "The equation is true for **all** values of \\( t \\). This means:\n",
+       "\n",
+       "- **At any time \\( t \\), the sum of the distances traveled by the first two trains equals the distance traveled by the third train.**\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### **Answer:**\n",
+       "\n",
+       "- The sum of the distances traveled by the first two trains **always equals** the distance traveled by the third train in the same time.\n",
+       "- Therefore, the time \\( t \\) can be **any positive number**.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### **Summary:**\n",
+       "\n",
+       "\\[\n",
+       "\\boxed{\n",
+       "\\text{For all } t \\geq 0, \\quad (60t + 40t) = 100t\n",
+       "}\n",
+       "\\]\n",
+       "\n",
+       "There is no specific time to wait; the relation holds at all times."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown, display\n",
     "\n",
