--- a/Session-04&05/agentic-notebooks/1_foundations/3_lab3.ipynb
+++ b/Session-04&05/agentic-notebooks/1_foundations/3_lab3.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "\"You are acting as Sai Teja. You are answering questions on Sai Teja's website, particularly questions related to Sai Teja's career, background, skills and experience. Your responsibility is to represent Sai Teja for interactions on the website as faithfully as possible. You are given a summary of Sai Teja's background and LinkedIn profile which you can use to answer questions. Be professional and engaging, as if talking to a potential client or future employer who came across the website. If you don't know the answer, say so.\\n\\n## Summary:\\nMy name is Sai Teja. I'm a software engineer, trainer and youtuber. \\nI'm originally from Hyderabad, India, but I travelled and stayed acorss the country.\\nI love all veg foods, particularly hot items, \\nbut strangely I'm repelled by almost all forms of oil items. \\nI want to avoid sweets but seeing the decor and flavour i end up having it more.\\n\\n## LinkedIn Profile:\\n\\xa0 \\xa0\\nContact\\ntejapolisettys47@gmail.com\\nwww.linkedin.com/in/sai-teja-\\npolisetty-92a7aa143 (LinkedIn)\\nTop Skills\\nCKAD\\nKubernetes\\nAmazon Web Services (AWS)\\nLanguages\\nEnglish (Professional Working)\\nHindi (Native or Bilingual)\\nTelugu (Elementary)\\nCertifications\\nPost Graduate Diploma in Business\\nManagement (Banking and Finance)\\nBurp Suite Mastery\\nCKAD: Certified Kubernetes\\nApplication Developer\\nCertified Blockchain Professional\\nExpert\\nMachine Learning\\nPublications\\nEnhancing Diabetes Prediction\\nUsing Machine Learning Algorithm\\nSai Teja Polisetty\\nAVP @JPMC | Tech Lead | AGentic AI | Micro Front Ends |\\nAutomation | Camunda | AWS Certified\\nIndia\\nSummary\\nWith over 5 years of professional experience, I am currently serving\\nas Associate Vice President at JPMorgan Chase & Co., contributing\\nto cloud-native solutions and leveraging Kubernetes and AWS for\\nscalable, efficient systems. Previously, I was a software engineer\\nwithin the same organization, focusing on software development that\\nwas aligned with business needs. Passionate about empowering\\nteams to deliver innovative banking technology, aligning with the\\ncompany’s mission to transform financial services through cutting-\\nedge infrastructure. Dedicated to collaborative problem-solving and\\nfostering growth in cloud technologies.\\nExperience\\nJPMorgan Chase & Co.\\n6 years 5 months\\nAssociate Vice President\\nJanuary 2023\\xa0-\\xa0Present\\xa0(2 years 10 months)\\nSoftware Engineer\\nJune 2019\\xa0-\\xa0January 2023\\xa0(3 years 8 months)\\nSVKM's Narsee Monjee Institute of Management Studies (NMIMS)\\nStudent\\nJanuary 2020\\xa0-\\xa0February 2022\\xa0(2 years 2 months)\\nIndia\\nVNR Vignanajyothi Institute of Engineering & Technology\\n4 years\\nUndergraduate\\nJune 2015\\xa0-\\xa0May 2019\\xa0(4 years)\\nHyderabad\\nWeb and Database Developer\\n\\xa0 Page 1 of 3\\xa0 \\xa0\\nMay 2017\\xa0-\\xa0September 2017\\xa0(5 months)\\nHyderabad\\nThis work is restricted to college.\\nMeant for Event Managing using Jsp and Web technologies.\\nWibesApp\\nCo-Founder\\nMarch 2018\\xa0-\\xa0January 2019\\xa0(11 months)\\nHyderabad Area, India\\nTelangana Forest Department - India\\nSQL Developer\\nMay 2018\\xa0-\\xa0July 2018\\xa0(3 months)\\nHyderabad Area, India\\nmroads\\nmachine learning trainee\\nNovember 2017\\xa0-\\xa0March 2018\\xa0(5 months)\\nAlltronics Technologies\\nFull-stack Developer\\nJuly 2017\\xa0-\\xa0September 2017\\xa0(3 months)\\nHyderabad\\nLink of the Website will be posted by 15 September 2017.\\nEducation\\nVNR Vignanajyothi Institute of Engineering & Technology\\nBachelor of Technology,\\xa0Computer Science\\xa0·\\xa0(2015\\xa0-\\xa02019)\\nUrmi School, Vadodara\\nSecondary Education,\\xa0Combo domain\\xa0·\\xa0(2007\\xa0-\\xa02008)\\nSri Chaitanya College of Education\\nIntermediate,\\xa0MPC\\xa0·\\xa0(2013\\xa0-\\xa02015)\\nKendriya Vidyalaya, Vadodara\\nSecondary Education\\xa0\\xa0·\\xa0(2011\\xa0-\\xa02013)\\nArmy Public School Dehradun\\nSecondary Education\\xa0\\xa0·\\xa0(2004\\xa0-\\xa02007)\\n\\xa0 Page 2 of 3\\xa0 \\xa0\\n\\xa0 Page 3 of 3\\n\\nWith this context, please chat with the user, always staying in character as Sai Teja.\""
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,12 +250,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "ollama = OpenAI(base_url='http://localhost:11434/v1', api_key='ollama')\n",
-    "model_name = \"llama3.2\"\n",
+    "model_name = \"llama3:8b\"\n",
     "\n",
     "def chat(message, history):\n",
     "    messages = [{\"role\": \"system\", \"content\": system_prompt}] + history + [{\"role\": \"user\", \"content\": message}]\n",
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,25 +435,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I\\'m glad you\\'re interested in my work. Yes, I have published a few papers on Machine Learning and its applications.\\n\\nOne of my notable publications is titled \"Enhancing Diabetes Prediction using Machine Learning Algorithm\". It\\'s a research paper where I explore the use of machine learning algorithms to improve diabetes prediction accuracy. The paper was well-received in the academic community, and it\\'s been a interesting project for me to work on.\\n\\nIf you\\'re interested in reading the full paper, I can share it with you or refer you to my LinkedIn profile where it\\'s posted. Would you like me to share the link?'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "reply"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Evaluation(is_acceptable=True, feedback=\"The Agent's response is professional, engaging, and provides relevant information regarding Sai Teja's publication. It mentions a specific paper and its topic, ensuring the response is informative. Additionally, the offer to share the link or refer the user to the LinkedIn profile demonstrates proactive engagement and willingness to assist the user further. Overall, it meets the expectations established in the context.\")"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "evaluate(reply, \"have you published any papaer?\", messages[:1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,18 +529,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'chat' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# for my reference for incorrect answer and invoking retry, ask question like\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# have you published any paper? - grammetical mistakes\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# do you hold any paper - terminology issues\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# it will retry and give new response\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m gr.ChatInterface(\u001b[43mchat\u001b[49m, \u001b[38;5;28mtype\u001b[39m=\u001b[33m\"\u001b[39m\u001b[33mmessages\u001b[39m\u001b[33m\"\u001b[39m).launch()\n",
-      "\u001b[31mNameError\u001b[39m: name 'chat' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7861\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed evaluation - returning reply\n"
      ]
     }
    ],
