--- a/Session-06&07/agentic-notebooks/2_openai-sdk/lab-6-tools-handoff-sales-functool.ipynb
+++ b/Session-06&07/agentic-notebooks/2_openai-sdk/lab-6-tools-handoff-sales-functool.ipynb
@@ -57,7 +57,7 @@
     "import os\n",
     "from sendgrid.helpers.mail import Mail, Email, To, Content\n",
     "import asyncio\n",
-    "import OPENAI\n"
+    "from openai import AsyncOpenAI\n"
    ]
   },
   {
